2001-11-26  Max Horn  <max@quendi.de>
	* version.cc: fixed Metrowerks detection; factored out some std::endl into a single spot
	* vgafile.cc: get_frame() now checks for lower bound, too (fixing a crash)

2001-11-25 Ryan Nunn <triforce@merlin.net.au>
	 * audio/Audio.cc : Note to self, Copy and Paste not so good

2001-11-25 Ryan Nunn <triforce@merlin.net.au>
	 * version.cc : Will this ever end... Windows and MSC stuff
	 * msvcstuff/Exult.dsp : Add in the version files to the project 
	 * msvcstuff/msvc_kludges.h : Finally updated version to 0.95cvs 
	 * audio/Audio.cc : Also search for SFX flexes in the <DATA> directory.

2001-11-25  Max Horn  <max@quendi.de>

	* version.cc: added MacOS support; added Metrowerks Codewarrior to the compiler list

2001-11-25  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* version.cc: reordered the output
	* exult.cc: -v/--version outputs version info
	* fnames.h, gamedat.cc, gamewin.cc: add exult.ver and newgame.ver
	to savegames, containing the version of exult that saved the game
	and started the game, respectively.
	* Makefile.*: added version.*

2001-11-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Newfile_gump.cc: reset 'filename' in FreeSaveGameDetails
	* version.*: more namespaces, expanded linux version a bit

2001-11-24 Ryan Nunn <triforce@merlin.net.au>
	* version.* : Windows stuff and std namespace stuff.

2001-11-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* version.*: added getVersionInfo to produce basic version info

2001-11-24 Max Horn <max@quendi.de>
	* bggame.cc, combat.cc, gamedat.cc: removed unused declarations
	* files/utils.c: fixed stat() to simply do a call through (buf may legally be 0)
	* files/zip.c, files/unzip.c: ANSIfied, removing K&R cruft
	* mac/mac_autoconfig.h, mac/exult_version.rsrc.bin, mac/ExultMac.mcp.xml.sit: updated
	* objs/iregobjs.h, objs/objs.h: removed unused clone() method
